==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/stm32/src/adc/implementation_3/subimplementation_2/hal_ll_adc.c <==
#include "hal_ll_adc.h"
#include "hal_ll_gpio.h"
#include "hal_ll_adc_pin_map.h"
#include "delays.h"
#define hal_ll_adc_get_module_state_address ((hal_ll_adc_handle_register_t *)*handle)
#define hal_ll_adc_get_handle (hal_ll_adc_handle_register_t *)hal_ll_adc_get_module_state_address->hal_ll_adc_handle
#define hal_ll_adc_get_base_struct(_handle) ((hal_ll_adc_base_handle_t *)_handle)
#define hal_ll_adc_get_base_from_hal_handle ((hal_ll_adc_hw_specifics_map_t *)((hal_ll_adc_handle_register_t *)\
                                            (((hal_ll_adc_handle_register_t *)(handle))->hal_ll_adc_handle))->hal_ll_adc_handle)->base
#define hal_ll_adc_module_num(_module_num) (_module_num - 1)
#define HAL_LL_ADC_ISR_OFFSET                  ( 0x00 )
#define HAL_LL_ADC_IER_OFFSET                  ( 0x04 / 4 )
#define HAL_LL_ADC_CR_OFFSET                   ( 0x08 / 4 )
#define HAL_LL_ADC_CFGR1_OFFSET                ( 0x0C / 4 )
#define HAL_LL_ADC_CFGR2_OFFSET                ( 0x10 / 4 )
#define HAL_LL_ADC_SMPR_OFFSET                 ( 0x14 / 4 )
#define HAL_LL_ADC_AWD1TR_OFFSET               ( 0x20 / 4 )
#define HAL_LL_ADC_CHSELR_OFFSET               ( 0x28 / 4 )
#define HAL_LL_ADC_DR_OFFSET                   ( 0x40 / 4 )
#define HAL_LL_ADC_CCR_OFFSET                  ( 0x308 / 4 )
#define HAL_LL_ADC_ADEN_BIT                    0
#define HAL_LL_ADC_ADRDY_BIT                   0
#define HAL_LL_ADC_ADDIS_BIT                   1
#define HAL_LL_ADC_ADSTART_BIT                 2

hal_ll_err_t hal_ll_adc_register_handle(hal_ll_pin_name_t pin, hal_ll_adc_voltage_reference_t vref_input, hal_ll_adc_resolution_t resolution, hal_ll_adc_handle_register_t *handle_map, uint8_t *hal_module_id)
{
    uint16_t pin_check_result;
    hal_ll_adc_pin_id index = {HAL_LL_PIN_NC};

    if ( (pin_check_result = hal_ll_adc_check_pins( pin, &index, handle_map )) == HAL_LL_PIN_NC ) {
        return HAL_LL_ADC_WRONG_PIN;
    };

    switch ( resolution )
    {
    case HAL_LL_ADC_RESOLUTION_6_BIT:
        hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_LL_ADC_6BIT_RES;
        break;
    case HAL_LL_ADC_RESOLUTION_8_BIT:
        hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_LL_ADC_8BIT_RES;
        break;
    case HAL_LL_ADC_RESOLUTION_10_BIT:
        hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_LL_ADC_10BIT_RES;
        break;
    case HAL_LL_ADC_RESOLUTION_12_BIT:
        hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_LL_ADC_12BIT_RES;
        break;
    default:
        return HAL_LL_ADC_UNSUPPORTED_RESOLUTION;
    }

    switch ( vref_input )
    {
        case HAL_LL_ADC_VREF_EXTERNAL:
            break;

        default:
            return HAL_LL_ADC_UNSUPPORTED_VREF;
    }

    if ( hal_ll_adc_hw_specifics_map[pin_check_result].pin != pin )
    {
        hal_ll_adc_map_pin( pin_check_result, &index );

        handle_map[pin_check_result].init_ll_state = false;
    }

    *hal_module_id = pin_check_result;

    hal_ll_module_state[pin_check_result].hal_ll_adc_handle = (handle_t *)&hal_ll_adc_hw_specifics_map[pin_check_result].base;

    handle_map[pin_check_result].hal_ll_adc_handle = (handle_t *)&hal_ll_module_state[pin_check_result].hal_ll_adc_handle;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_read( handle_t *handle, uint16_t *readDatabuf )
{
    hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_adc_get_module_state_address);
    low_level_handle = hal_ll_adc_get_handle;
    hal_ll_adc_base_handle_t *base = ( hal_ll_adc_base_handle_t * )hal_ll_adc_hw_specifics_map_local->base ;

    *(base + HAL_LL_ADC_CHSELR_OFFSET) = 1ul << hal_ll_adc_hw_specifics_map_local->channel;
    set_reg_bit( ( base + HAL_LL_ADC_CR_OFFSET ), HAL_LL_ADC_ADSTART_BIT );

    Delay_1us();
    while( !(check_reg_bit( ( base + HAL_LL_ADC_ISR_OFFSET ), HAL_LL_ADC_EOC_BIT ) ) );
    *readDatabuf = ( *(base + HAL_LL_ADC_DR_OFFSET) );
    return HAL_LL_ADC_SUCCESS;
}

static hal_ll_pin_name_t hal_ll_adc_check_pins( hal_ll_pin_name_t pin, hal_ll_adc_pin_id *index, hal_ll_adc_handle_register_t *handle_map )
{
    static const uint16_t     adc_map_size = ( sizeof( _adc_map ) / sizeof( hal_ll_adc_pin_map_t ) );
    uint16_t     pin_index = 0;
    uint8_t      index_counter = 0;
    uint8_t      hal_ll_module_id = 0;

    if ( HAL_LL_PIN_NC == pin ) {
        return HAL_LL_PIN_NC;
    }

    for ( pin_index = 0; pin_index < adc_map_size; pin_index++ )
    {
        if ( pin == _adc_map[pin_index].pin )
        {
            // Get module number
            hal_ll_module_id = _adc_map[pin_index].module_index;
            // Map pin name
            index->pin_an[hal_ll_module_id] = pin_index;

            // Check if module is taken
            if ( NULL == handle_map[ hal_ll_module_id ].hal_drv_adc_handle ) {
                return hal_ll_module_id;
            } else if ( ADC_MODULE_COUNT == ++index_counter ) {
                return --index_counter;
            }
        }
    }

    if ( index_counter ) {
        return hal_ll_module_id;
    } else {
        return HAL_LL_PIN_NC;
    }
}

static void hal_ll_adc_map_pin( uint8_t module_index, hal_ll_adc_pin_id *index ) {
    // Map new pins
    hal_ll_adc_hw_specifics_map[module_index].pin = _adc_map[ index->pin_an[module_index] ].pin;
    hal_ll_adc_hw_specifics_map[module_index].channel = _adc_map[ index->pin_an[module_index] ].channel;
}

static void _hal_ll_adc_hw_init( hal_ll_adc_base_handle_t *base, uint32_t resolution )
{
    rcc_clocks_t    rcc_clocks;
    static uint32_t *reg;
    static uint32_t temp_reg;
    static uint32_t adc_clk;
    /* ADC clock
    The ADC features two clock schemes:
    Clock for the analog circuitry: ADCCLK, common to all ADCs
    This clock is generated from the APB2 clock divided by a programmable prescaler that
    allows the ADC to work at fPCLK2/2, /4, /6 or /8. ADCCLK maximum value is 30 MHz
    when the APB2 clock is at 60 MHz. */
    RCC_GetClocksFrequency( &rcc_clocks );

//     Turn off ADC module.
    if ( check_reg_bit( ( base + HAL_LL_ADC_CR_OFFSET ), HAL_LL_ADC_ADEN_BIT ) )
    {
        set_reg_bit( ( base + HAL_LL_ADC_CR_OFFSET ), HAL_LL_ADC_ADDIS_BIT );

        while( check_reg_bit( ( base + HAL_LL_ADC_CR_OFFSET ), HAL_LL_ADC_ADDIS_BIT ) );
    }
    if ( check_reg_bit( ( base + HAL_LL_ADC_CR_OFFSET ), HAL_LL_ADC_ADDIS_BIT ) )
    {
        set_reg_bit( ( base + HAL_LL_ADC_CR_OFFSET ), HAL_LL_ADC_ADSTP_BIT );
    }


    // Select the correct ADC clock source.
    temp_reg = _RCC_CCIPR;
    temp_reg >>= HAL_LL_ADC_CCIPR;

    switch ( temp_reg )
    {
    // If system clock selected as source.
    case 0 :
        adc_clk = rcc_clocks.sysclk;
        break;
    // If nothing of the above use PCLK as default clock.
    default:
        adc_clk = rcc_clocks.pclk;
        break;
    }

    adc_clock_mode( adc_clk, base );

    // Wait for ADEN to go down.
    while( check_reg_bit( ( base + HAL_LL_ADC_CR_OFFSET ), HAL_LL_ADC_ADEN_BIT ) );

    // Start calibration.
    set_reg_bit( ( base + HAL_LL_ADC_CR_OFFSET ), HAL_LL_ADC_ADCAL_BIT );
    while( check_reg_bit( ( base + HAL_LL_ADC_CR_OFFSET ), HAL_LL_ADC_ADCAL_BIT ) );

    // Set sampling time - 1.5 ADC clock.
    *( base + HAL_LL_ADC_SMPR_OFFSET ) &= HAL_LL_ADC_SMPR;

    // Set resolution.
    reg = ( base + HAL_LL_ADC_CFGR1_OFFSET );
    *reg &= HAL_LL_ADC_RESOLUTION_MASK;
    *reg |= resolution;

    // Wait for hardware to clear ADC_CR register.
    while( ( *( base + HAL_LL_ADC_CR_OFFSET ) & HAL_LL_ADC_CR_WAIT ) != 0 );

    // Scan sequence upward.
    clear_reg_bit( ( base + HAL_LL_ADC_CFGR1_OFFSET ), HAL_LL_ADC_SCANDIR_BIT );

    // Data alignment - right.
    clear_reg_bit( ( base + HAL_LL_ADC_CFGR1_OFFSET ), HAL_LL_ADC_ALIGN_BIT );

    // Single conversion mode.
    clear_reg_bit( ( base + HAL_LL_ADC_CFGR1_OFFSET ), HAL_LL_ADC_CONT_BIT );

    // External trigger disable.
    *( base + HAL_LL_ADC_CFGR1_OFFSET ) &= HAL_LL_ADC_EXTEN;

    // Turn on ADC module.
    set_reg_bit( ( base + HAL_LL_ADC_CR_OFFSET ), HAL_LL_ADC_ADEN_BIT );
    while( !( check_reg_bit( ( base + HAL_LL_ADC_ISR_OFFSET ), HAL_LL_ADC_ADRDY_BIT ) ) );
}

static void hal_ll_adc_init( hal_ll_adc_hw_specifics_map_t *map ) {

    hal_ll_gpio_analog_input( hal_ll_gpio_port_base( hal_ll_gpio_port_index( map->pin ) ),
                                                     hal_ll_gpio_pin_mask( map->pin ) );

    _hal_ll_adc_enable_clock( map->module_index );

    _hal_ll_adc_hw_init((hal_ll_adc_base_handle_t *)map->base, map->resolution);

}
